# PLUGNPLAYCLI

./: CMakeLists.txt  INSTALL.md  README.md  android_installers.txt  install.ps1  install.sh  install_universal.sh  install_unix.sh  install_windows.bat  install_windows.ps1  linux_installers.txt  nodejs_installers.txt  server.cpp  setup_deps.sh  setup_deps_windows.ps1
.github/workflows/: build-release.yml
PLUGNPLAYCLI-master/: INSTALL.md  README.md  install.sh  install_simple.sh  install_windows.bat  macos_installers.txt  windows_installers.txt
PLUGNPLAYCLI-master/.github/workflows/: build-release.yml
